Refactoring item and adding checklist and ability to save

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.data.mongodb.uri=mongodb+srv://admin:Spock33GG@tododb-9k2p3.mongodb.net/test?retryWrites=true
-spring.data.mongodb.database=ToDo
+spring.data.mongodb.database=ToDoDB
